--- a/abasic-web/index.html
+++ b/abasic-web/index.html
@@ -4,11 +4,10 @@
 
 <body>
     <script type="module">
-        import { default as wasm, greet } from "./pkg/abasic_web.js";
+        import { default as wasm, evaluate_basic } from "./pkg/abasic_web.js";
 
         wasm().then((module) => {
-            console.log("COOL");
-            greet();
+            console.log(evaluate_basic('PRINT "HELLO " 1+2'));
         });
     </script>
 </body>
