--- a/abasic-web/index.html
+++ b/abasic-web/index.html
@@ -3,11 +3,5 @@
 <title>ABASIC</title>
 
 <body>
-    <script type="module">
-        import { default as wasm, evaluate_basic } from "./pkg/abasic_web.js";
-
-        wasm().then((module) => {
-            console.log(evaluate_basic('PRINT "HELLO " 1+2'));
-        });
-    </script>
+    <script type="module" src="main.js"></script>
 </body>
