--- a/abasic-web/index.html
+++ b/abasic-web/index.html
@@ -136,5 +136,5 @@ a.github img {
       Loading&hellip;
       <noscript>Alas, you need JavaScript enabled to use this page.</noscript>
     </div>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="ts/main.js"></script>
 </body>
