Add note about .ugh-ios.

--- a/abasic-web/index.html
+++ b/abasic-web/index.html
@@ -19,7 +19,10 @@
    to make things a bit less horrible for the user, primarily by
    sticking everything to the bottom of the page instead of the top.
    The downside is that we lose the scrollback buffer but this is
-   better than the alternative. */
+   better than the alternative.
+
+   NOTE: I originally wrote this in 2017 so it may be irrelevant
+   at this point (2024), I'm not sure. */
 html.ugh-ios, html.ugh-ios body {
   height: 100%;
 }
