--- a/abasic-web/index.html
+++ b/abasic-web/index.html
@@ -2,6 +2,11 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 <style>
+/**
+ * Most of this file's content is based on:
+ * https://github.com/toolness/werewolves-and-wanderer-rs/blob/master/static/index.html
+ */
+
 * {
   box-sizing: border-box;
 }
