--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@ body, label, input {
   white-space: pre-wrap;
 }
 
+#output .info {
+  color: blue;
+}
+
+#output .warning {
+  color: yellow;
+}
+
+#output .error {
+  color: red;
+}
+
 #form {
   display: flex;
   align-items: center;
