Preserve trace coloring in input prompts.

--- a/abasic-web/index.html
+++ b/abasic-web/index.html
@@ -71,15 +71,15 @@ body, label, input {
   white-space: pre-wrap;
 }
 
-#output .info {
+.info {
   color: blue;
 }
 
-#output .warning {
+.warning {
   color: yellow;
 }
 
-#output .error {
+.error {
   color: red;
 }
 
