Show line with caret in Web version.

--- a/abasic-web/index.html
+++ b/abasic-web/index.html
@@ -83,6 +83,10 @@ body, label, input {
   color: red;
 }
 
+.error-context {
+  color: lightgray;
+}
+
 #form {
   display: flex;
   align-items: center;
