--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@ body, label, input {
   color: red;
 }
 
+.error-context {
+  /**
+   * We might be showing carets pointing at lines above them,
+   * word-wrapping would make them illegible.
+   */
+  white-space: pre;
+
+  color: lightgray;
+}
+
 #form {
   display: flex;
   align-items: center;
